--- a/src/app/shared/components/sidemenu/sidemenu.component.scss
+++ b/src/app/shared/components/sidemenu/sidemenu.component.scss
@@ -3,4 +3,11 @@
 .sidemenu {
   --ion-background-color: #{$black};
   --ion-text-color: #{$pure-white};
+
+  &__content-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+  }
 }
